# mixity-concoction

./: .gitignore  Cargo.toml  README.md  bevy_game.js
.github/workflows/: ci.yaml  release.yaml
assets/models/: Tree.gltf  alchemy.gltf  arrow.gltf  backpack.gltf  bush.gltf  floating_island.gltf  ingredients.gltf  ingridients.gltf  mushrooms.gltf  player.gltf  potions.gltf  tree.gltf
assets/shaders/: foliage.wgsl
blender/: alchemy.blend  backpack.blend  bush.blend  ingredients.blend  mushrooms.blend  player.blend  potions.blend  shitty_floating_island.blend  shrooms.blend  tree.blend
src/: assets.rs  debug.rs  effects.rs  helper.rs  input.rs  main.rs  materials.rs  physics.rs  player.rs  window.rs  world.rs
src/debug/: debug_camera.rs  mod.rs
src/game/: alchemy.rs  backpack.rs  effects.rs  ingredient.rs  input.rs  items.rs  materials.rs  mod.rs  physics.rs  player.rs  world.rs
src/loading/: mod.rs
src/main_menu/: mod.rs
