[package]
name = "gamejam-concoction"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Bevy specific crates
bevy = "0.10.1"
bevy_embedded_assets = "0.7.0"
bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d", "serde-serialize"] }
bevy_asset_loader = "0.16.0"
leafwing-input-manager = "0.9.1"
# Other
rand = "0.8.5"
smallvec = "1.10.0"
# Debug stuff
bevy-inspector-egui = "0.18.3"
bevy_prototype_debug_lines = { version = "0.10.1", features = ["3d"] }
lazy_static = "1.4.0"